--- a/contact.html
+++ b/contact.html
@@ -164,22 +164,22 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
-                                <h3>Unopar Rubiataba</h3>
-                                <p>Av. Principal, 123 - Centro, Rubiataba - GO</p>
+                                <h3>Unopar Ceres</h3>
+                                <!-- <p>Av. Principal, 123 - Centro,  - GO</p> -->
                             </div>
                         </div>
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                             <div class="media-body">
                                 <h3>(62) 3333-3333</h3>
-                                <p>Segunda a Sexta, 8h às 18h</p>
+                                <p>Segunda a Sexta, 13h às 17h - 18h às 22h | Sabado 07h às 11h</p>
                             </div>
                         </div>
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <h3>contato@unoparrubiataba.edu.br</h3>
-                                <p>Envie-nos suas dúvidas a qualquer momento!</p>
+                                <!-- <h3>contato@unoparrubiataba.edu.br</h3>
+                                <p>Envie-nos suas dúvidas a qualquer momento!</p> -->
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                                     </div>
                                     <div class="footer-tittle">
                                         <div class="footer-pera">
-                                            <p>A Unopar Rubiataba é uma instituição comprometida com a excelência acadêmica e a formação de profissionais qualificados.</p>
+                                            <p>A Unopar Ceres é uma instituição comprometida com a excelência acadêmica e a formação de profissionais qualificados.</p>
                                         </div>
                                     </div>
                                     <!-- Social -->
@@ -249,11 +249,11 @@
                                 <div class="footer-tittle">
                                     <h4>Institucional</h4>
                                     <ul>
-                                        <li><a href="#">Sobre Nós</a></li>
+                                        <!-- <li><a href="#">Sobre Nós</a></li>
                                         <li><a href="#">Missão e Valores</a></li>
                                         <li><a href="#">Política de Privacidade</a></li>
                                         <li><a href="#">Termos de Uso</a></li>
-                                        <li><a href="#">Trabalhe Conosco</a></li>
+                                        <li><a href="#">Trabalhe Conosco</a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -267,11 +267,11 @@
                     <div class="footer-border">
                         <div class="row d-flex align-items-center">
                             <div class="col-xl-12">
-                                <div class="footer-copy-right text-center">
-                                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                <!-- <div class="footer-copy-right text-center">
+                                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
                                         Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os direitos reservados | Unopar Rubiataba
-                                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                                </div>
+                                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>
+                                </div> -->
                             </div>
                         </div>
                     </div>
