--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Contato | Unopar Rubiataba</title>
-    <meta name="description" content="Entre em contato com a Unopar Rubiataba para mais informações sobre nossos cursos, matrículas e suporte.">
+    <title>Contato | Unopar Ceres</title>
+    <meta name="description" content="Entre em contato com a Unopar Ceres para mais informações sobre nossos cursos, matrículas e suporte.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
