--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
                                 <h3>Unopar Ceres</h3>
-                                <!-- <p>Av. Principal, 123 - Centro,  - GO</p> -->
+                                <!-- <p>Rua Leopoldina Salgado, nº289 Centro, Ceres, Goiás</p> -->
                             </div>
                         </div>
                         <div class="media contact-info">
@@ -178,8 +178,8 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <!-- <h3>contato@unoparrubiataba.edu.br</h3>
-                                <p>Envie-nos suas dúvidas a qualquer momento!</p> -->
+                                <!-- <h3>*</h3>
+                                <p>*</p> -->
                             </div>
                         </div>
                     </div>
